# gaia_game_server

./: .gitignore  LICENSE  README.md
game_server/: Cargo.toml  map_1.tiles
game_server/definitions/: buffs.csv  cards.csv  character_progression.csv  definition_versions.csv  items.csv  main_paths.csv  main_pathse.csv  mob_progression.csv  mobs.csv  props.csv  towers_difficulty.csv  weapons.csv
game_server/map_initial_data/: world001_a00_props.bytes  world001_a01_props.bytes  world001_a02_props.bytes  world001_a03_props.bytes  world001_a10_props.bytes  world001_a11_props.bytes  world001_a12_props.bytes  world001_a13_props.bytes  world001_a20_props.bytes  world001_a21_props.bytes  world001_a22_props.bytes  world001_a23_props.bytes  world001_a30_props.bytes  world001_a31_props.bytes  world001_a32_props.bytes  world001_a33_props.bytes  world001_b00_props.bytes  world001_b01_props.bytes  world001_b02_props.bytes  world001_b03_props.bytes  world001_b10_props.bytes  world001_b11_props.bytes  world001_b12_props.bytes  world001_b13_props.bytes  world001_b20_props.bytes  world001_b21_props.bytes  world001_b22_props.bytes  world001_b23_props.bytes  world001_b30_props.bytes  world001_b31_props.bytes  world001_b32_props.bytes  world001_b33_props.bytes  world001_c00_props.bytes  world001_c01_props.bytes  world001_c02_props.bytes  world001_c03_props.bytes  world001_c10_props.bytes  world001_c11_props.bytes  world001_c12_props.bytes  world001_c13_props.bytes  (+3042 more)
game_server/map_working_data/: world_002_a00_props.bytes  world_002_a01_props.bytes  world_002_a02_props.bytes  world_002_a03_props.bytes  world_002_a10_props.bytes  world_002_a11_props.bytes  world_002_a12_props.bytes  world_002_a13_props.bytes  world_002_a20_props.bytes  world_002_a21_props.bytes  world_002_a22_props.bytes  world_002_a23_props.bytes  world_002_a30_props.bytes  world_002_a31_props.bytes  world_002_a32_props.bytes  world_002_a33_props.bytes  world_002_b00_props.bytes  world_002_b01_props.bytes  world_002_b02_props.bytes  world_002_b03_props.bytes  (+300 more)
(+162 files in other folders)
