[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features =["full"]}
socket2 = { version = "0.4", features = ["all"] }
tokio-util = "0.7"
num_cpus = "1.13"