[package]
name = "game_server"
version = "0.1.0"
edition = "2021"
default-run = "game_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features =["full", "tracing"]}
socket2 = { version = "0.4", features = ["all"] }
tokio-util = "0.7"
num_cpus = "1.13"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.21.3"
rand = "0.8.5"
# console-subscriber = "0.1.8"


# [profile.release]
# incremental = true
# debug = true
# lto = "fat"


