[package]
name = "game_server"
version = "0.1.0"
edition = "2021"
default-run = "game_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.0", features =["full", "tracing"]}
futures-util = "0.3.25"
socket2 = { version = "0.4", features = ["all"] }
tokio-util = "0.7"
num_cpus = "1.13"
hyper = { version = "0.14.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# hyper-staticfile = "0.9.1"
hyper-static = "0.1.5"
serde_json = "1.0"
glam = "0.21.3"
rand = "0.8.5"
flate2 = "1.0.25"

mongodb = "2.3.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
# flate2 = "1.0"
# flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
# console-subscriber = "0.1.8"


# [profile.release]
# incremental = true
# debug = true
# lto = "fat"


